# LLMerge

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Output.txt  README.md  SEPARATION_UPDATE.md  build.gradle  build_dataset.sh  build_dataset_reaper_100.sh  build_dataset_reaper_1000.sh  code.ipynb  collect_merges.sh  collect_merges_small.sh  eval.py  eval_all_checkpoints.sh  example_r1_train.py  plot_checkpoints.py  pyproject.toml  run_direct_sft_experiments.sh  run_distill_experiments.sh  run_sft_experiments.sh  settings.gradle  sft_train.py  test.py  train.py
.github/workflows/: ci.yml
eval_ouputs/unsloth/deepSeek-r1-distill-qwen-1.5b-loaded-4bit/: example_0.txt  example_1.txt  example_2.txt  (+2 more)
grpo_trainer_lora_model/: adapter_config.json
input_data/: repos_reaper.csv  repos_reaper_100.csv  repos_reaper_1000.csv  repos_reaper_1000_1400.csv
merges/repos_50/: all_merges.csv  conflict_files.csv  conflict_metrics.csv  merges.csv
merges/repos_small/: all_merges.csv  conflict_files.csv  conflict_metrics.csv  merges.csv
runpod/: rsync_send.sh  setup_runpod.sh
setup/: setup.sh
src/: analyze_mistakes.py  build_dataset.py  deepseek_sft_data.py  eval.py  extract_conflict_blocks.py  extract_conflict_files.py  find_merges.py  get_conflict_files.py  metrics_conflict_blocks.py  model_inference.py  replay_conflicts.py  sample_reaper_dataset.py  train.py  utils.py  variables.py
src/scripts/: build_performance_table.sh
tables/: all_results_combined.csv  mistake_analysis_per_model.csv  results_table.md  results_table.tex  results_table_sft.md  results_table_sft.tex
(+155 files in other folders)
