[project]
name = "llmerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "datasets>=3.3.2",
    "gitpython>=3.1.44",
    "latex2sympy2-extended>=1.0.9",
    "loguru>=0.7.3",
    "math-verify>=0.6.0",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "pylint>=3.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.7",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "trl>=0.15.1",
    "wandb>=0.19.7",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = [
    'repos/',
]
